src/test/ui/rfc-2361-dbg-macro/dbg-macro-requires-debug.stderr
error[E0277]: `NotDebug` doesn't implement `std::fmt::Debug`
  --> $DIR/dbg-macro-requires-debug.rs:6:23
   |
LL |     let _: NotDebug = dbg!(NotDebug);
   |                       ^^^^^^^^^^^^^^ `NotDebug` cannot be formatted using `{:?}`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `NotDebug`
   = note: add `#[derive(Debug)]` or manually implement `std::fmt::Debug`
   = note: required because of the requirements on the impl of `std::fmt::Debug` for `&NotDebug`
   = note: required by `std::fmt::Debug::fmt`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
